styles/lineChart.module.css
.cardContainer {
    background: white;
    padding: 20px;
    border-radius: 4px;
    margin: 20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

@media (max-width: 768px) {
    .cardContainer {
        flex: 1 1 auto;
    }
  }

.headerContainer {
    display: flex;
    justify-content: space-between
}

.appearOnHover{
    visibility: hidden;
}

.appearOnHover:active{
    visibility:visible;
}

.cardContainer:hover .headerContainer .appearOnHover {
    visibility:visible;
  }


.chart {
    display: grid;
    width: 100%;
    position: relative;
    overflow: hidden;  
    border-top: 2px solid #6E81AD;
    border-radius: 2px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

